src/compiler/z42.Tests/Fixtures/errors/abstract_not_implemented/source.z42
namespace Demo;

abstract class Animal {
    abstract string Speak();
}

class Dog : Animal {
    // Missing override of Speak() — should be a compile error
}

void Main() {
    var d = new Dog();
}
